content/boomerang-flow/2.3.0/getting-to-know/07.tasks.md
---
title: Tasks
index: 7
---

# Tasks

When in the workflow editor, users will notice the collapsable task pallet on the left-side of the their screen. Tasks are split into different expendable categories. Individual tasks can be dragged and dropped on the editor graph. From there, users can connect tasks together in a left-to-right flow. Hit the pencil icon on any task to make configurations.

## Verified Tasks

With this release, we now make the distinction of labeling out-of-the-box tasks as `verified`. Teams are welcome to create their own tasks, they will be labeled as a `community contribution`. The IBM Services Engineering team will only be supporting verified tasks. These tasks are described in more detail below.

## Task Versioning

We may publish a new version of a task if we want to add additional parameters or functionality. In doing so, these may introduce breaking changes. So workflows won't be automatically updated to use the latest version of the task. There will be a caution icon sitting on your workflow card to let you know that there is a more recent version available of a task that is used in this flow. A user can then view the comparison of the previous version and what the new version looks like. They can continue to run their workflow with the previous version, but we would suggest to upgrade to the latest version.

## Workflow Tasks

As of this release, there are currently two unique tasks that deserve further explanation. They are listed both under the `Workflow` category in the the task pallet.

### Run custom task

With the custom task, users can bring their own container and run that as a task.

### Switch

This task acts as a logical gate for workflows. The Switch takes a value. This could likely be an output property from a previous task or an input property to the workflow. Then the user has the ability to conditionally control the path of execution based upon the value supplied to the switch. If a link coming off the switch has a set label that does not match the value of what was supplied to the switch, then those subsequent connected tasks will not be executed.

## Artifactory

- **File Download** - supply login credentials to artifactory (via username/password or username/API Token). Supply the direct URL route to the desired file. The file will be downloaded and named based upon the `Destination Path` specified.
- **File Upload** - similar to the above plugin. Specify the URL to include the path in Artifactory and specify the name of the file at the end of the path as you would like for it to be displayed in Artifactory.

## Boomerang

- **Send Platform Email** - configure an email to be sent from the platform
- **Send Platform Notification** - send a platform-wide notification. For more information on platform notifications, see our documentation under `Boomerang architecture`

## Communication

- **Simple Slack Message** - wrapper plugin around the [Slack Messaging Api](https://api.slack.com/messaging/sending)
- **Custom Slack Message** - Allows for more configuration, refer to the slack API and create a custom JSON payload if the simple slack message does not meet your needs
- **Slack Message with File Contents** - Similar to the simple slack message, this plugin allows users to attach contents of a file
- **Upload Slack File with Message** - Upload a file to slack
- **Slack User Look Up** - Slack API used to derive a slack username from an email. Usually used as a step before sending a slack message to a user

## File Utilities

- **Check File Contains String** - Specify a direct path that includes the file name. Plugin will search to find a specified regex pattern for the file
- **Check File or Folder Exists** - Search for a file or folder. User can have the task fail if the folder/file is not found
- **Create File** - Specify a file location and its contents
- **Read File to Property** - Specify a file and the desired output property name. The file then gets stored as an output string and can be referenced as a value in later tasks
- **Read Properties from File** - in a delimiter separated list, key-value pairs are converted into output properties that can be accessed in later tasks. Please list one key-value pair per line.
- **Replace String in a File** - Within a specified file, the first instance of a string will be replaced with the value supplied by the user during configuration.

## Github

- **Find Issues and Label** - Finds issues in a repository based on time since last activity and adds a label and a comment. This is useful for marking issues inactive or reminding users to update an issue.
- **Find Issues and Remove** - Finds github issues and removes with optional days since activity and labels
- **Find Public Repositories in Org**
- **Make Repositories Private**

## Servicenow

- **Get Incidents** - Get Incidents from ServiceNow with optional State
- **Update Incidents** - Update Incidents from ServiceNow

## Utilities

- **Execute HTTP Call** - Make an HTTP request, specify an endpoint.
- **Execute Shell Script** - Supply your own script
- **Json Path To Property** - Takes the first value returned by a valid JSONPath expression and sets as an output property
- **Sleep** - Sleep for specified duration in milliseconds
